tests/NormalTests/paczka1/fuzzy1/52045290.err
Error in line 2: jPQsQm S224 24,6
Error in line 15: A259 A259 43,9
Error in line 4: zwrpiqC0L A320 12,8
Error in line 17: zwrpiqC0L S224 90,7
Error in line 7: ViJ A259 98,5
Error in line 19: VzEA S248 2,3
Error in line 20: zwrpiqC0L S248 59,8
